--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://192.168.147.128:3306/oj?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.1.104:3306/community?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123456
+
+
 spring.mvc.favicon.enabled=false
 spring.messages.basename=i18n.index
 bing.everyday.image=https://api.isoyu.com/bing_images.php
