--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.url=jdbc:mysql://192.168.1.104:3306/community?useUnicode=true&
 spring.datasource.username=root
 spring.datasource.password=123456
 
-
 spring.mvc.favicon.enabled=false
+# \u56FD\u9645\u5316\u914D\u7F6E
 spring.messages.basename=i18n.index
+
+# bing \u6BCF\u65E5\u56FE\u7247 api
 bing.everyday.image=https://api.isoyu.com/bing_images.php
