--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:mysql://192.168.1.104:3306/community?useUnicode=true&
 spring.datasource.username=root
 spring.datasource.password=123456
 
+# \u963F\u91CC\u5DF4\u5DF4\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u7B80\u5355\u914D\u7F6E
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
 spring.mvc.favicon.enabled=false
 # \u56FD\u9645\u5316\u914D\u7F6E
 spring.messages.basename=i18n.index
