--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.datasource.url=jdbc:mysql://192.168.147.128:3306/oj?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://192.168.147.128:3306/community?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=puzhiwei
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.1.105:3306/community?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=pzw123456
 
 # \u963F\u91CC\u5DF4\u5DF4\u6570\u636E\u5E93\u8FDE\u63A5\u6C60\u7B80\u5355\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
