删除不必要的文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,27 @@ spring.mvc.favicon.enabled=false
 # \u56FD\u9645\u5316\u914D\u7F6E
 spring.messages.basename=i18n.index
 
+# \u65E5\u5FD7
+logging.file=log/spring.log
+
+# \u6B63\u5E38\u7684\u65E5\u5FD7\u7EA7\u522B
+logging.level.root=info
+
+# \u663E\u793A mapper \u76EE\u5F55\u4E0B\u65E5\u5FD7\u7EA7\u522B
+logging.level.com.buguagaoshu.community.mapper=debug
+
+# \u5355\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
+logging.file.max-size=1MB
+
+# \u8981\u4FDD\u7559\u7684\u6700\u5927\u5B58\u6863\u65E5\u5FD7\u6587\u4EF6\u6570
+logging.file.max-history=
+
 # bing \u6BCF\u65E5\u56FE\u7247 api
 bing.everyday.image=https://api.isoyu.com/bing_images.php
 
 
 index.page.size=10
-
+# jwt \u5BC6\u94A5
 jwt.key=buguagaoshu
 # \u4E24\u5C0F\u65F6
 jwt.ttl=7200000
