--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,8 @@ logging.level.com.buguagaoshu.community.mapper=debug
 # \u5355\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
 logging.file.max-size=1MB
 
-# \u8981\u4FDD\u7559\u7684\u6700\u5927\u5B58\u6863\u65E5\u5FD7\u6587\u4EF6\u6570
-logging.file.max-history=
+# \u8981\u4FDD\u7559\u7684\u6700\u5927\u5B58\u6863\u65E5\u5FD7\u5929\u6570
+logging.file.max-history=7
 
 # bing \u6BCF\u65E5\u56FE\u7247 api
 bing.everyday.image=https://api.isoyu.com/bing_images.php
