完成热门话题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,13 +26,16 @@ logging.file=log/spring.log
 logging.level.root=info
 
 # \u663E\u793A mapper \u76EE\u5F55\u4E0B\u65E5\u5FD7\u7EA7\u522B
-logging.level.com.buguagaoshu.community.mapper=debug
+# logging.level.com.buguagaoshu.community.mapper=debug
 
 # \u5355\u65E5\u5FD7\u6587\u4EF6\u5927\u5C0F
 logging.file.max-size=1MB
 
 # \u8981\u4FDD\u7559\u7684\u6700\u5927\u5B58\u6863\u65E5\u5FD7\u5929\u6570
 logging.file.max-history=7
+
+# \u5B9A\u65F6\u5220\u9664\u767B\u9646\u8FC7\u671F\u7684\u5728\u7EBF\u7528\u6237\u95F4\u9694\u65F6\u95F4,\u9ED8\u8BA4\u4E24\u5C0F\u65F6
+delete.onlineuser.time=7200000
 
 # bing \u6BCF\u65E5\u56FE\u7247 api
 bing.everyday.image=https://api.isoyu.com/bing_images.php
@@ -41,5 +44,5 @@ bing.everyday.image=https://api.isoyu.com/bing_images.php
 index.page.size=10
 # jwt \u5BC6\u94A5
 jwt.key=buguagaoshu
-# \u4E24\u5C0F\u65F6
+# \u9ED8\u8BA4token\u6709\u6548\u671F\u4E24\u5C0F\u65F6
 jwt.ttl=7200000
