--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,10 @@
             <version>0.9.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-jdbc</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.session</groupId>-->
+            <!--<artifactId>spring-session-jdbc</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
