--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     username: puzhiwei
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
-  session:
-    jdbc:
-      initialize-schema: always
+#  session:
+#    jdbc:
+#      initialize-schema: always
   servlet:
     multipart:
       # 限制单文件最大大小
