--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.147.132:3306/community?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://192.168.1.105:3306/community?useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: 123456
+    password: pzw123456
     type: com.alibaba.druid.pool.DruidDataSource
   redis:
-    host: 192.168.1.104
-    password: *****
+    host: 192.168.1.105
+    password: pzw123456
     timeout: 1000ms
   cache:
     redis:
